[tool.poetry]
name = "cargo-agent"
version = "0.0.1"
description = ""
authors = [
    "Frappe Technologies Pvt Ltd <developers@frappe.io>"
]
license = "AGPL-3.0"
packages = [
    { include = "client" },
    { include = "agent" },
    { include = "generated" }
]

[tool.poetry.dependencies]
python = "^3.12"

anyio = "4.9.0"
bcrypt = "4.3.0"
certifi = "2025.6.15"
cffi = "1.17.1"
charset-normalizer = "3.4.2"
click = "8.2.1"
crontab = "1.0.4"
cryptography = "45.0.4"
etcd3 = { git = "https://github.com/kragniz/python-etcd3.git", rev = "e58a899579ba416449c4e225b61f039457c8072a" }
filelock = "3.18.0"
freezegun = "1.5.2"
future = "1.0.0"
grpcio = "1.73.0"
grpcio-tools = "1.73.0"
idna = "3.10"
Jinja2 = "3.1.6"
MarkupSafe = "3.0.2"
mysqlclient = "2.2.7"
paramiko = "3.5.1"
peewee = "3.18.1"
pefile = "2021.9.3"
podman = "5.5.0"
protobuf = "6.31.1"
psutil = "7.0.0"
pycparser = "2.22"
PyNaCl = "1.5.0"
python-dateutil = "2.9.0.post0"
redis = "6.2.0"
requests = "2.32.4"
rq = "2.4.0"
rq-scheduler = "0.14.0"
ruff = "0.11.13"
setuptools = "80.9.0"
six = "1.17.0"
sniffio = "1.3.1"
tenacity = "9.1.2"
types-protobuf = "6.30.2.20250516"
typing_extensions = "4.14.0"
urllib3 = "2.5.0"
watchfiles = "1.1.0"

[tool.poetry.group.dev.dependencies]
Flask = "3.1.1"
blinker = "1.9.0"
itsdangerous = "2.2.0"
Werkzeug = "3.1.3"
honcho = "2.0.0"
docker = "7.1.0"
beautifulsoup4 = "4.13.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
